Large import fro rvt

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,43 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>ru.yandex.qatools.htmlelements</groupId>
+    	<artifactId>htmlelements-java</artifactId>
+    	<version>1.13</version>
+    </dependency>
+    <dependency>
+    	<groupId>ru.yandex.qatools.htmlelements</groupId>
+    	<artifactId>htmlelements-matchers</artifactId>
+    	<version>1.13</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    	<artifactId>selenium-api</artifactId>
+    	<version>2.46.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    	<artifactId>selenium-support</artifactId>
+    	<version>2.46.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    	<artifactId>selenium-remote-driver</artifactId>
+    	<version>2.46.0</version>
+    </dependency>
   </dependencies>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.3</version>
+  			<configuration>
+  			   <source>1.7</source>
+  			   <target>1.7</target>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
