--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
     	<artifactId>selenium-remote-driver</artifactId>
     	<version>2.46.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.testng</groupId>
+    	<artifactId>testng</artifactId>
+    	<version>6.9.4</version>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
   	<plugins>
