--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
     	<version>6.9.4</version>
     	<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>2.0.2-beta</version>
+    </dependency>
   </dependencies>
   <build>
   	<plugins>
